fixes responsive styles so that the content is always taking advantage of the full window real estate, and specifically targets and reverses the md-no-scroll class that was keeping our tables inside tabs from horizontal scrolling

--- a/WebApp/client/app.css
+++ b/WebApp/client/app.css
@@ -140,7 +140,8 @@
       .content-canvas {
         padding-top: 64px;
         padding-bottom: 64px;
-        margin-left: 210px;
+        width: 100%;
+        /*margin-left: 210px;*/
       }
       .onboarding-canvas {
         padding-top: 64px;
@@ -149,12 +150,10 @@
     }
 
   .content {
-    margin-left: auto;
-    margin-right: auto;
-    padding-bottom: 2rem;
-    padding-left: 2rem;
-    padding-right: 2rem;
-    padding-top: 2rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
+    padding-top: 0;
+    padding-bottom: 0;
   }
   .public-content {
     height: 100%;
@@ -163,29 +162,10 @@
     padding-right: 2rem;
     padding-top: 2rem;
   }
-  /* MD */
-  @media only screen
-    and (min-width: 960px)
-    and (max-width: 1279px) {
-      .content {
-        width: 750px;
-      }
-    }
-  /* LG */
-  @media screen
-    and (min-width: 1280px)
-    and (max-width: 1919px) {
-      .content {
-        width: 1070px;
-      }
-    }
-  /* XL */
-  @media screen
-    and (min-width: 1920px) {
-      .content {
-        width: 1720px;
-      }
-    }
+
+  md-tab-content.md-no-scroll {
+    overflow: auto;
+  }
 
   .bottom-tabs {
     min-width: 320px;
